build: Release Please to control tests module too
Release Please updates the versions listed in the manifest
only. The tests module is not touched by Release Please.
This pull request attempts to include the module into the scope
of Release Please

https://github.com/googleapis/release-please/issues/1453

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,6 +9,10 @@
     },
     "libraries-bom": {
       "component": "libraries-bom"
+    },
+    "tests": {
+      "component": "tests",
+      "bump-minor-pre-major": true
     }
   },
   "plugins": [
