--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -37,6 +37,11 @@
       <version>1.5.12</version>
     </dependency>
     <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>1.1.3</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
