--- a/.github/workflows/full-convergence-check.yaml
+++ b/.github/workflows/full-convergence-check.yaml
@@ -24,6 +24,24 @@ jobs:
         mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBomReachable"
       working-directory: tests
 
+  bom-assertion-test:
+    name: BomContentAssertionsTest (Test for assertion logic in BomContentTest)
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'googleapis'
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        distribution: zulu
+        java-version: 8
+    - run: java -version
+    - name: Install Google Cloud BOM
+      run: |
+        mvn -B -V -ntp install
+    - run: |
+        mvn -B -V -ntp verify -Dtest="BomContentAssertionsTest"
+      working-directory: tests
+
   linkage-checker:
     name: Linkage Checker to find new linkage errors
     runs-on: ubuntu-latest
