feat: Verifying that tests module do not get picked up release please

--- a/tests/dependency-convergence/pom.xml
+++ b/tests/dependency-convergence/pom.xml
@@ -30,7 +30,7 @@
         <scope>import</scope>
       </dependency>
       <!-- {x-version-update-end} -->
-
+      <!-- adding comment for testing-->
       <!-- Excluding checking the version of this artifact because it's build-
         time dependency and should not cause problems in users' environments -->
       <dependency>
