adding test/dependency-convergence to release please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -13,6 +13,10 @@
     "tests": {
       "component": "tests",
       "bump-minor-pre-major": true
+    },
+    "tests/dependency-convergence": {
+      "component": "tests-dependency-convergence",
+      "bump-minor-pre-major": true
     }
   },
   "plugins": [
