--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,6 @@
 {
   "google-cloud-bom": "0.176.0",
   "libraries-bom": "26.0.0",
-  "tests": "0.0.1"
+  "tests": "0.0.1",
+  "tests-dependency-convergence": "0.0.1"
 }
