--- a/tests/dependency-convergence/pom.xml
+++ b/tests/dependency-convergence/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>full-convergence-check</artifactId>
   <packaging>pom</packaging>
   <!-- We do not publish this module to Maven Central -->
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:full-convergence-check:current} -->
   <name>Full convergence check for all library dependencies in Google Cloud Java BOM</name>
   <description>
     BOM for Full convergence check on google-cloud-java
