--- a/.github/workflows/full-convergence-check.yaml
+++ b/.github/workflows/full-convergence-check.yaml
@@ -6,6 +6,27 @@ on:
 name: ci
 jobs:
   bom-content-test:
+    name: Checking content of the Libraries BOM
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'googleapis' && github.head_ref == 'release-please--branches--main'
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        distribution: zulu
+        java-version: 8
+    - run: java -version
+    - name: Install BOMs
+      run: |
+        mvn -B -V -ntp install
+    - name: Ensure the BOM has valid content
+      run: |
+        # BomContentTest should run part of the verify
+        mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBom"
+      working-directory: tests
+
+  libraries-bom-member-existence:
+    name: Checking Libraries BOM members exist in Maven Central
     runs-on: ubuntu-latest
     if: github.repository_owner == 'googleapis'
     steps:
@@ -15,7 +36,7 @@ jobs:
         distribution: zulu
         java-version: 8
     - run: java -version
-    - name: Install Google Cloud BOM
+    - name: Install BOMs
       run: |
         mvn -B -V -ntp install
     - name: Ensure the BOM has valid content
@@ -35,7 +56,7 @@ jobs:
         distribution: zulu
         java-version: 8
     - run: java -version
-    - name: Install Google Cloud BOM
+    - name: Install BOMs
       run: |
         mvn -B -V -ntp install
     - run: |
@@ -70,15 +91,30 @@ jobs:
         distribution: zulu
         java-version: 8
     - run: java -version
-    - name: Install Google Cloud BOM
+    - name: Install BOMs
       run: |
         mvn -B -V -ntp install
     - name: Validate dependency convergence of library dependencies in the Google Cloud BOM
       run: |
         mvn -B -V -ntp validate
       working-directory: tests/dependency-convergence
-    - name: Validate dependency convergence of library dependencies in the Google Cloud BOM
+
+  dependencies-convergence-cloud-client-libraries:
+    name: Checking convergence among "google-cloud-*" libraries (experimental)
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'googleapis' && github.head_ref == 'release-please--branches--main'
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        distribution: zulu
+        java-version: 8
+    - run: java -version
+    - name: Install BOMs
+      run: |
+        mvn -B -V -ntp install
+    - name: Ensure convergence among "google-cloud-*" libraries
       run: |
         # BomContentTest should run part of the verify
-        mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBom"
+        mvn -B -V -ntp verify -Dtest="BomContentTest#assertDependencyConvergenceWithinCloudJavaLibraries"
       working-directory: tests
