--- a/.github/workflows/full-convergence-check.yaml
+++ b/.github/workflows/full-convergence-check.yaml
@@ -6,27 +6,6 @@ on:
 name: ci
 jobs:
   bom-content-test:
-    name: Checking content of the Libraries BOM
-    runs-on: ubuntu-latest
-    if: github.repository_owner == 'googleapis' && github.head_ref == 'release-please--branches--main'
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: zulu
-        java-version: 8
-    - run: java -version
-    - name: Install BOMs
-      run: |
-        mvn -B -V -ntp install
-    - name: Ensure the BOM has valid content
-      run: |
-        # BomContentTest should run part of the verify
-        mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBom"
-      working-directory: tests
-
-  libraries-bom-member-existence:
-    name: Checking Libraries BOM members exist in Maven Central
     runs-on: ubuntu-latest
     if: github.repository_owner == 'googleapis'
     steps:
@@ -41,8 +20,12 @@ jobs:
         mvn -B -V -ntp install
     - name: Ensure the BOM has valid content
       run: |
-        # BomContentTest should run part of the verify
         mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBomReachable"
+      working-directory: tests
+    - name: Ensure the BOM has valid content
+      if: github.head_ref == 'release-please--branches--main'
+      run: |
+        mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBom"
       working-directory: tests
 
   bom-assertion-test:
