--- a/.github/workflows/full-convergence-check.yaml
+++ b/.github/workflows/full-convergence-check.yaml
@@ -18,11 +18,11 @@ jobs:
     - name: Install BOMs
       run: |
         mvn -B -V -ntp install
-    - name: Ensure the BOM has valid content
+    - name: Ensure the members of the Libraries BOM exist in Maven Central
       run: |
         mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBomReachable"
       working-directory: tests
-    - name: Ensure the BOM has valid content
+    - name: Ensure the BOM has valid content (at releases)
       if: github.head_ref == 'release-please--branches--main'
       run: |
         mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBom"
