ci: skip-github-release for tests

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -12,7 +12,8 @@
     },
     "tests/dependency-convergence": {
       "component": "tests-dependency-convergence",
-      "bump-minor-pre-major": true
+      "bump-minor-pre-major": true,
+      "skip-github-release": true
     }
   },
   "plugins": [
