fix: touching libraries-bom/pom.xml

--- a/libraries-bom/pom.xml
+++ b/libraries-bom/pom.xml
@@ -20,7 +20,7 @@
   <inceptionYear>2019</inceptionYear>
   <developers>
     <developer>
-      <name>Elliotte Rusty Harold</name>
+      <name>Cloud Java team</name>
     </developer>
   </developers>
 
