--- a/renovate.json
+++ b/renovate.json
@@ -70,8 +70,5 @@
     }
   ],
   "semanticCommits": true,
-  "dependencyDashboard": true,
-  "ignorePaths": [
-    "libraries-bom"
-  ]
+  "dependencyDashboard": true
 }
