chore: removing unnecessary site configuration

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,15 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+      <!--
+        Not adding nexus-staging-maven-plugin here, because it would override
+        the skip configuration above when running "mvn deploy" command and tries to upload
+        this root pom.xml to the staging repository. When we tried the skip configuration
+        of nexus-staging-maven-plugin, it skipped all modules in this repository.
+        However, "mvn nexus-staging:release" command requires nexus-staging-maven-plugin.
+        Therefore the plugin configured to be available only for the "release" command as
+        defined in the profile below.
+      -->
     </plugins>
   </build>
   <profiles>
@@ -52,7 +61,7 @@
       <id>release-staging-repository</id>
       <activation>
         <property>
-          <!-- The root project not using nexus-staging-maven-plugin when signing -->
+          <!-- The root project not using nexus-staging-maven-plugin when signing (mvn deploy) -->
           <name>!gpg.executable</name>
         </property>
       </activation>
@@ -65,11 +74,6 @@
           <id>sonatype-nexus-staging</id>
           <url>https://google.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
-        <site>
-          <id>github-pages-site</id>
-          <name>Deployment through GitHub's site deployment plugin</name>
-          <url>site/google-cloud-bom</url>
-        </site>
       </distributionManagement>
       <build>
         <plugins>
