--- a/google-cloud-bom/pom.xml
+++ b/google-cloud-bom/pom.xml
@@ -204,6 +204,27 @@
       </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-datalabeling-bom</artifactId>
+        <version>0.124.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-datastore-bom</artifactId>
+        <version>2.12.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-errorreporting-bom</artifactId>
+        <version>0.125.0-beta</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-firestore-bom</artifactId>
         <version>3.6.0</version>
         <type>pom</type>
@@ -223,8 +244,22 @@
       </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-mediatranslation-bom</artifactId>
+        <version>0.10.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-nio</artifactId>
         <version>0.124.17</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-phishingprotection-bom</artifactId>
+        <version>0.34.6</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
