--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,12 @@
         the skip configuration above when running "mvn deploy" command and tries to upload
         this root pom.xml to the staging repository. When we tried the skip configuration
         of nexus-staging-maven-plugin, it skipped all modules in this repository.
-        However, "mvn nexus-staging:release" command requires nexus-staging-maven-plugin.
-        Therefore the plugin configured to be available only for the "release" command as
-        defined in the profile below.
+        Thus, we cannot use nexus-staging-maven-plugin when uploading artifacts to a staging
+        repository.
+        However, when we release the staging repository as the next step,
+        "mvn nexus-staging:release" command requires nexus-staging-maven-plugin.
+        Therefore, the plugin is configured to be available only for the "release" command
+        as defined in the "release-staging-repository" profile below.
       -->
     </plugins>
   </build>
@@ -59,12 +62,6 @@
     <profile>
       <!-- profile for nexus-staging:release invocation -->
       <id>release-staging-repository</id>
-      <activation>
-        <property>
-          <!-- The root project not using nexus-staging-maven-plugin when signing (mvn deploy) -->
-          <name>!gpg.executable</name>
-        </property>
-      </activation>
       <distributionManagement>
         <snapshotRepository>
           <id>sonatype-nexus-snapshots</id>
