--- a/google-cloud-bom/pom.xml
+++ b/google-cloud-bom/pom.xml
@@ -249,8 +249,10 @@
       </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-storage</artifactId>
+        <artifactId>google-cloud-storage-bom</artifactId>
         <version>2.14.0</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
