--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.google.cloud.tools</groupId>
     <artifactId>dependencies-parent</artifactId>
     <version>1.5.13</version>
+    <relativePath/>
   </parent>
   <artifactId>google-cloud-bom-dashboard</artifactId>
   <version>0.0.1-SNAPSHOT</version>
