GH_TOKEN when updating release note

--- a/.github/workflows/release-note-generation.yaml
+++ b/.github/workflows/release-note-generation.yaml
@@ -36,3 +36,5 @@ jobs:
       working-directory: release-note-generation
       env:
         LIBRARIES_BOM_VERSION: ${{ inputs.librariesBomVersion }}
+        GH_TOKEN: ${{ github.token }}
+
