--- a/.github/workflows/release-note-generation.yaml
+++ b/.github/workflows/release-note-generation.yaml
@@ -32,7 +32,7 @@ jobs:
         LIBRARIES_BOM_VERSION: ${{ inputs.librariesBomVersion }}
     - name: Update the release note with release_note.md
       run: |
-        TAG="libraries-bom-v{LIBRARIES_BOM_VERSION}"
+        TAG="libraries-bom-v${LIBRARIES_BOM_VERSION}"
         echo "Updating ${TAG}"
         gh release edit "${TAG}" --notes-file release_note.md
       working-directory: release-note-generation
