--- a/.github/workflows/ci-release-note-generation.yaml
+++ b/.github/workflows/ci-release-note-generation.yaml
@@ -2,9 +2,9 @@ on:
   pull_request:
     paths:
       - 'release-note-generation/**'
-name: release-notes
+name: release-note-generation-test
 jobs:
-  release-note-generation:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
