--- a/release-note-generation/pom.xml
+++ b/release-note-generation/pom.xml
@@ -32,6 +32,12 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.truth</groupId>
+			<artifactId>truth</artifactId>
+			<version>1.1.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
