--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </license>
   </licenses>
   <modules>
-    <!-- Only modules to be published to Maven Central. Not tests. -->
+    <!-- Only modules to be published to Maven Central. No tests or release note generation. -->
     <module>google-cloud-bom</module>
     <module>libraries-bom</module>
   </modules>
