--- a/.github/workflows/ci-release-note-generation.yaml
+++ b/.github/workflows/ci-release-note-generation.yaml
@@ -36,7 +36,8 @@ jobs:
         mvn -B -ntp compile
         # This generates release_note.md file
         mvn -B -ntp exec:java \
-            -Dexec.args="com.google.cloud:libraries-bom:26.1.5"
+            -Dlibraries-bom.version="26.2.0" \
+            -Dgoogle-cloud-java.version="1.1.0"
       working-directory: release-note-generation
       env:
         GH_TOKEN: ${{ github.token }}
