--- a/libraries-bom/pom.xml
+++ b/libraries-bom/pom.xml
@@ -70,7 +70,7 @@
         <scope>import</scope>
       </dependency>
 
-      <!-- google-cloud-java from https://github.com/googleapis/java-cloud-bom-->
+      <!-- google-cloud-java from https://github.com/googleapis/java-cloud-bom -->
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-bom</artifactId>
