--- a/libraries-bom/pom.xml
+++ b/libraries-bom/pom.xml
@@ -59,6 +59,14 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <!-- overriding GAX version for libraries BOM 26.1.6 release -->
+        <groupId>com.google.api</groupId>
+        <artifactId>gax-bom</artifactId>
+        <version>2.19.6</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <!-- first-party-dependencies is part of google-cloud-shared-dependencies
            BOM in https://github.com/googleapis/java-shared-dependencies/blob/main/first-party-dependencies/pom.xml.
            This includes Guava, Protobuf, gRPC, Google Auth Libraries, etc. -->
