--- a/libraries-bom/pom.xml
+++ b/libraries-bom/pom.xml
@@ -60,10 +60,17 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <!-- overriding GAX version for libraries BOM 26.1.6 release -->
+        <!-- overriding GAX and Protobuf versions for Beam's dependency consistency -->
         <groupId>com.google.api</groupId>
         <artifactId>gax-bom</artifactId>
         <version>2.19.6</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-bom</artifactId>
+        <version>3.21.10</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
