--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,8 +3,9 @@
   "versioning": "always-bump-minor",
   "separate-pull-requests": false,
   "include-component-in-tag": false,
-  "extra-files": ["README.md"],
   "packages": {
-    ".": {}
+    ".": {
+      "extra-files": ["README.md"]
+    }
   }
 }
