check within the repository

--- a/.github/workflows/full-convergence-check.yaml
+++ b/.github/workflows/full-convergence-check.yaml
@@ -19,9 +19,9 @@ jobs:
       run: |
         mvn -B -V -ntp install
     - name: Ensure the members of the Libraries BOM exist in Maven Central
-      run: |
-        mvn -B -V -ntp verify -Dtest="BomContentTest#testLibrariesBomReachable"
-      working-directory: tests
+      uses: tests/validate-bom
+      with:
+        bom-path: libraries-bom/pom.xml
     - name: Ensure the BOM has valid content (at releases)
       if: github.head_ref == 'release-please--branches--main'
       run: |
