temurin 11 by default

--- a/.github/workflows/ci-release-note-generation.yaml
+++ b/.github/workflows/ci-release-note-generation.yaml
@@ -12,6 +12,7 @@ jobs:
       with:
         distribution: zulu
         java-version: 11
+        cache: maven
     - run: java -version
     - name: Run test in release-note-generation
       shell: bash
