--- a/.github/workflows/full-convergence-check.yaml
+++ b/.github/workflows/full-convergence-check.yaml
@@ -12,8 +12,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: zulu
-        java-version: 8
+        distribution: temurin
+        java-version: 11
+        cache: maven
     - run: java -version
     - name: Install BOMs
       run: |
