--- a/tests/validate-bom/action.yml
+++ b/tests/validate-bom/action.yml
@@ -7,6 +7,11 @@ inputs:
 runs:
   using: "composite"
   steps:
+  - uses: actions/setup-java@v3
+    with:
+      distribution: temurin
+      java-version: 11
+      cache: maven
   - name: Set up Maven
     uses: stCarolas/setup-maven@v4.5
     with:
