ci: GitHub Actions to validate a Maven BOM (#5928)
Fixes #5922 

It worked in https://togithub.com/googleapis/gapic-generator-java/pull/1629


Todo: 
- Merge this pull request 5928.
- Update the branch name in https://togithub.com/googleapis/gapic-generator-java/pull/1629 to "main"
- Add another check in https://togithub.com/googleapis/google-cloud-java with "main"

--- a/.github/workflows/ci-release-note-generation.yaml
+++ b/.github/workflows/ci-release-note-generation.yaml
@@ -10,8 +10,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: zulu
+        distribution: temurin
         java-version: 11
+        cache: maven
     - run: java -version
     - name: Run test in release-note-generation
       shell: bash
@@ -27,8 +28,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: zulu
+        distribution: temurin
         java-version: 11
+        cache: maven
     - run: java -version
     - name: Dry-run release-note-generation
       shell: bash
