--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -11,8 +11,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: zulu
+        distribution: temurin
         java-version: 8
+        cache: maven
     - run: java -version
     - run: .kokoro/dashboard.sh
       env:
@@ -24,8 +25,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: zulu
+        distribution: temurin
         java-version: 8
+        cache: maven
     - run: java -version
     - run: .kokoro/dashboard.sh
       env:
