--- a/tests/validate-bom/action.yml
+++ b/tests/validate-bom/action.yml
@@ -49,6 +49,9 @@ runs:
     working-directory: /tmp/bom-validation
     run: |
       echo "working directory: $(pwd)"
+      # This should detect errors that may pass "mvn install". For example:
+      # [ERROR] 'dependencies.dependency.groupId' for $com.google.protobuf:protobuf-java:jar with value '$com.google.protobuf' does not match a valid id pattern.
+      # https://github.com/googleapis/java-cloud-bom/issues/5936
       ERROR_MESSAGE=$(mvn dependency:tree -X |grep ERROR)
       if [ -n "${ERROR_MESSAGE}" ]; then
         echo "${ERROR_MESSAGE}"
