--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -23,7 +23,7 @@ jobs:
         cd ..
         mkdir -p ../site/static/google-cloud-bigquery  # Make sure the output directory exists
         rm -rf ../site/static/google-cloud-bigquery/*  # Clear any existing files in the output directory
-        cd $java-bigquery/google-cloud-bigquery
+        cd java-bigquery/google-cloud-bigquery
         mvn javadoc:javadoc
         cp target/site/apidocs/* ../../site/static/google-cloud-bigquery/
         cd ..
